--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -5,20 +5,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/homepage_background"
-    tools:context=".view.BottomNavigationFragment">
+    tools:context=".view.HomepageFragment">
 
-    <FrameLayout
-        android:id="@+id/homepage_frag_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+
+    <ScrollView
+        android:id="@+id/scroll_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/bottomNavigationView"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="50dp"
+        android:orientation="vertical">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
+    </ScrollView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/bottomNavigationView"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="0dp"
+        app:menu="@menu/bottom_menu"
         app:itemIconSize="30dp"
-        app:menu="@menu/bottom_menu" />
+        />
 
 </RelativeLayout>
