--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -35,7 +35,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:elevation="12dp"
-        android:id="@+id/view2"
+        android:id="@+id/profile_image_view"
         app:cardCornerRadius="40dp"
         android:layout_centerHorizontal="true"
         android:layout_alignParentStart="true"
@@ -78,7 +78,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/bottomNavigationView"
-        android:layout_below="@+id/view2"
+        android:layout_below="@+id/profile_image_view"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
         android:layout_marginStart="50dp"
