--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,29 +7,19 @@
     android:background="@drawable/homepage_background"
     tools:context=".view.ProfileFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Profile"
-        android:textSize="18sp"
-        android:textColor="@color/black"
-        android:layout_centerInParent="true"
-        android:layout_centerHorizontal="true"
-        />
 
-
-    <Button
+    <ImageButton
         android:id="@+id/drop_down_button"
-        android:layout_width="113dp"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="275dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="23dp"
+        android:layout_marginStart="295dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="7dp"
         android:layout_marginBottom="20dp"
-        android:background="#30ffffff"
-        android:text="Settings" />
+        android:background="#00000000"
+        android:src="@drawable/baseline_list_24" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="80dp"
