--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -7,15 +7,19 @@
         android:layout_height="match_parent"
         android:background="@drawable/login_background"
         tools:context=".view.LoginAndSignUpActivity">
-
+        <ScrollView
+            android:id="@+id/scroll_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
         <TextView
             android:id="@+id/sign_in"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginEnd="25dp"
-            android:layout_marginBottom="15dp"
             android:gravity="center"
             android:text="Sign Up"
             android:textColor="@color/white"
@@ -26,7 +30,6 @@
             android:id="@+id/first_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/sign_in"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
@@ -41,7 +44,6 @@
             android:id="@+id/last_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/first_name"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
@@ -52,11 +54,24 @@
             android:padding="20dp"
             android:textColor="@color/white"
             android:textColorHint="@color/white" />
+                        <EditText
+                            android:id="@+id/username"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginEnd="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:background="#30ffffff"
+                            android:drawablePadding="20dp"
+                            android:hint="Username"
+                            android:padding="20dp"
+                            android:textColor="@color/white"
+                            android:textColorHint="@color/white" />
         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/last_name"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
@@ -86,7 +101,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/confirm_password"
-            android:layout_below="@id/password"
             android:background="#30ffffff"
             android:hint="Confirm Password"
             android:textColorHint="@color/white"
@@ -115,7 +129,6 @@
             android:id="@+id/sign_up_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/dob"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
@@ -128,7 +141,6 @@
             android:id="@+id/accountCheck"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/sign_up_button"
             android:hint="Already have an account?"
             android:padding="10dp"
             android:textColor="@color/white"
@@ -142,6 +154,8 @@
             android:layout_alignParentEnd="true"
             android:background="#30ffffff"
             android:text="Login" />
+                </LinearLayout>
+        </ScrollView>
 
         <FrameLayout
             android:id="@+id/signUp_frag_container"
