--- a/app/src/main/res/layout/fragment_other_user_profile.xml
+++ b/app/src/main/res/layout/fragment_other_user_profile.xml
@@ -9,23 +9,34 @@
 
 
 
-
+    <ImageButton
+        android:id="@+id/back_button"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="7dp"
+        android:layout_marginBottom="7dp"
+        android:background="#00000000"
+        android:src="@drawable/baseline_keyboard_backspace_24" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="80dp"
         android:layout_height="80dp"
+
         android:elevation="12dp"
         android:id="@+id/profile_image_view"
         app:cardCornerRadius="40dp"
         android:layout_centerHorizontal="true"
         android:layout_alignParentStart="true"
         android:layout_marginStart="35dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="23dp"
         android:layout_marginBottom="20dp">
+
         <ImageView
             android:id="@+id/profile_image"
             android:layout_width="match_parent"
+
             android:layout_height="80dp"
             android:scaleType="centerCrop"
             android:src="@drawable/baseline_person_2_24" />/>
@@ -40,7 +51,7 @@
         android:layout_marginStart="150dp"
         android:textSize="18sp"
         android:textColor="@color/black"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="23dp"
         android:layout_marginBottom="30dp"
         android:text="Username" />
@@ -55,7 +66,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="70dp"
         android:layout_marginBottom="100dp"
         android:src="@drawable/baseline_person_2_24" />
 
@@ -75,7 +86,7 @@
         android:layout_toRightOf="@+id/username"
         android:textSize="18sp"
         android:textColor="@color/black"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="23dp"
         android:layout_marginBottom="10dp"
         android:text="#" />
@@ -91,6 +102,9 @@
         android:layout_marginEnd="23dp"
         android:layout_marginBottom="30dp"
         android:text="Friends" />
+
+
+
 
 
 </RelativeLayout>
